Repair scroll: overflow-y auto

--- a/smn/smn.css
+++ b/smn/smn.css
@@ -1,3 +1,11 @@
+
+body {
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
 .bgimg-1, .bgimg-2, .bgimg-3 {
   position: relative;
   opacity: 0.65;
